- BUG options screen: Redesigned hover texts with lists and General tab
- New Font File includes citizen icon, great general icon, and blank icon
- Replaced "General" with icon in GG Bar.
- Created FontUtil for adding new constants to FontSymbols (Define symbols in XML: <symbol id [name] [from] [offset]/>; provides getChar(symbol) for easier access to unicode string for symbol)
- Resource pages in Sevopedia show all buildings they affect in the Buildings list--not just the buildings that supply the resource
- Added FoodAssist: net food added to stores per turn and turns until starvation
- Added Advanced Scoreboard option to show Civ ID number; layout character is "I" but it's not in the default layout
- Added EventSigns: plots whose yields change due to random events marked on the map with signs
- Added Civ4lert for cities that will/have come out of occupation after capture or revolt.
- Added BUG Finance Advisor with breakdowns for Commerce and Income.
- Added Civ4lert for cities founded by rivals.
- Added Civ4lert for when rival will become a vassal, capitulate, or sign a peace treaty.


Bugfixes:
- Advanced Scoreboard: Fixed offset for vassals when grouped
- Advanced Scoreboard: Changed empty vassal indent to a bullet
- Autolog: Added checking of logging to all logging options which was previously ignored
- Autolog: Fixed bug with Autolog onCityOffered logging which was misinterpreting a passed event argument
- IconGrid: Added changes by DanF5771 (two widget data values instead of one)
- IconGrid: Fixed bug where empty icon and stacked bar columns caused following columns to misalign
- MA: Removed event reporting
- MA: Reversed leaderhead parameters so attitude of row leaderhead is shown
- Fixed bug where Trade.findTypes() from TradeUtil.py was returning a list of types rather than a list of trades with that type
- Fixed click/hover response on (widescreen) research bar
- CDA now adjusts position of Liberate button to make sure it doesn't overlap Exit text
