@@ -30,6 +30,7 @@ credits = [ "BUG_TEAM|BUG Team",
 		    "Cammagno - Cammagno's CDA Pages",
 		    " -    (extended Autolog)",
 		    "Chinese American - Culture Turns, Great Person Turns",
+		    "codewarrior - Min/Max Commerce Buttons",
 		    "daengle - (merged in full PLE)",
 		    "Dr. Elmer Jiggle - Civ4lerts, CvCustomEventManager, CvPath",
 		    "Dresden - Improved EFA Info Page, Discoverable Favorite Civics with Random Personalities",
