@@ -24,6 +24,7 @@ Features:
 - Added BUG Finance Advisor with breakdowns for Commerce and Income.
 - Added Civ4lert for cities founded by rivals.
 - Added Civ4lert for when rival will become a vassal, capitulate, or sign a peace treaty.
+- Added Min/Max Commerce Buttons by codewarrior.
 
 
 Bugfixes:
